Added Basic, JWT authentication and token verification
